# rocket-casbin-auth

./: Cargo.toml  README.md  READNE.md
examples/: role_policy.csv
src/: lib.rs
tests/: middleware.rs
