[package]
name = "rocket_casbin_auth"
version = "0.1.0"
authors = ["zengl"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version="0.4.5" }
casbin = { version = "1.1.2", default-features = false, features = [ "runtime-tokio", "incremental", "cached"] }
tokio = { version = "0.2", default-features = false, features = ["stream", "rt-core"] }