[package]
name = "rocket_casbin_auth"
version = "0.1.1"
authors = ["simoin"]
edition = "2018"
license = "Apache-2.0"
description = "Casbin Rocket access control middleware"
documentation = "https://docs.rs/rocket-casbin-auth"
homepage= "https://github.com/simoin/rocket-casbin-auth"
readme = "README.md"
keywords = ["middleware", "rocket", "casbin", "authorization"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rocket_casbin_auth"
path = "src/lib.rs"

[dependencies]
rocket = { version="0.4.5" }
casbin = { version = "1.1.2", default-features = false, features = [ "runtime-tokio", "incremental", "cached"] }

[dev-dependencies]
tokio = { version = "0.2", default-features = false, features = ["stream", "rt-core"] }